setting username done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,13 @@
         android:theme="@style/Theme.Taskmaster"
         tools:targetApi="31">
         <activity
-            android:name=".activities.AllTaskActivity"
+            android:name=".activities.UserSettingsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.TaskDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.AllTasksActivity"
             android:exported="false" />
         <activity
             android:name=".activities.AddTaskActivity"
